固定リンクが表示されないように設定

--- a/static/stylesheets/custom_gr.css
+++ b/static/stylesheets/custom_gr.css
@@ -510,7 +510,7 @@ background: rgba(255, 255, 255, 0.9);
 }
 
 @media print {
-    .headingActionLink {
+    .heading-button {
         display: none;
     }
 }
