--- a/layouts/partials/meganav.html
+++ b/layouts/partials/meganav.html
@@ -114,9 +114,9 @@
                 </h3>
             </div>
 
-            <ul class="mega-list" role="list">
+            <ul class="mega-list">
         {{- range .Pages }}
-                <li class="mega-list-line" role="presentation"><a class="mega-list-item" role="listitem" href="{{.RelPermalink}}">{{- partial "title" . }}</a></li>
+                <li class="mega-list-line"><a class="mega-list-item" href="{{.RelPermalink}}">{{- partial "title" . }}</a></li>
         {{- end }}
             </ul>
         </div>
