初期値として$descを用いる

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -42,8 +42,11 @@
     {{- if or (eq .Params.type "search_result") (eq .Params.nolink true) }}
     <meta name="robots" content="noindex">
     {{- end }}
+    {{- if .Description }}
     <meta name="description" content="{{.Description}}">
-    <meta name="keywords" content="{{ delimit .Keywords ", " }}">
+    {{- else }}
+    <meta name="description" content="{{$desc}}">
+    {{- end }}
     <meta name="thumbnail" content="https://{{.Site.Params.domain}}{{ .Site.Params.og_img | relURL }}">
     <meta property="og:url" content="https://{{.Site.Params.domain}}{{.Permalink | relURL }}">
     {{- if .IsHome}}
@@ -54,7 +57,11 @@
     <meta property="og:site_name" content="{{$sitename}}">
     <meta property="og:title" content="{{$title}}">
     <meta property="og:image" content="https://{{.Site.Params.domain}}{{ .Site.Params.og_img | relURL }}">
+    {{- if .Description }}
     <meta property="og:description" content="{{.Description}}">
+    {{- else }}
+    <meta property="og:description" content="{{$desc}}">
+    {{- end }}
     <meta property="og:locale" content="{{.Site.LanguageCode}}">
     <meta name="apple-mobile-web-app-title" content="{{$title}}">
     <meta name="apple-mobile-web-app-capable" content="yes">
