--- a/static/stylesheets/custom_common.css
+++ b/static/stylesheets/custom_common.css
@@ -30,6 +30,10 @@
     margin-bottom: 120px;
 }
 
+.home-article:lang(en) {
+    padding-bottom: 170px;
+}
+
 /* 768px以上の設定 *****************************************************/
 @media only screen and (min-width:768px){
     .logo-title {
