レビューのアドバイスに従う

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -949,11 +949,10 @@ ul.breadcrumbs {
     padding-bottom: 150px;
 }
 
-.proc1 {
+.proc1,.proc2 {
     margin:0 4px 0 0;
     padding:4px 8px;
     color:#FFF;
-    background-color: #00823B;
     display:inline-block;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -961,16 +960,12 @@ ul.breadcrumbs {
     font-weight:bold;
 }
 
+.proc1 {
+    background-color: #00823B;
+}
+
 .proc2 {
-    margin:0 4px 0 0;
-    padding:4px 8px;
-    color:#FFF;
     background-color: #4169e1;
-    display:inline-block;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    font-weight:bold;
 }
 
 /* -------------------- end of Article */
