サブナビの展開ボタンとリンクが重なるのを調整

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -726,7 +726,7 @@ ul.breadcrumbs {
 .jstree-ocl {
     display: inline-block;
     vertical-align: top;
-    padding: 5px 5px 0 5px;
+    padding: 5px 5px 0 0;
     width: 14px;
 }
 
