--- a/static/stylesheets/custom_general.css
+++ b/static/stylesheets/custom_general.css
@@ -28,6 +28,11 @@
     margin-bottom: 7px;
 }
 
+.h6-noanc {
+    margin-top: 0px;
+    margin-bottom: 7px;
+    padding-top: 0px;
+}
 
 /* 768px以上の設定 *****************************************************/
 @media only screen and (min-width:768px){
