.h6-noancを追記する

--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -74,6 +74,12 @@
   color: #fff;
 }
 
+.h6-noanc {
+    margin-top: 0px;
+    margin-bottom: 7px;
+    padding-top: 0px;
+}
+
 /* Tiles of the top page */
 .col-tile {
   border-radius: 10px;
