--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -950,7 +950,7 @@ ul.breadcrumbs {
 }
 
 .proc1,.proc2 {
-    margin:0 4px 0 0;
+    margin:0 4px 4px 0;
     padding:4px 8px;
     color:#FFF;
     display:inline-block;
