--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -38,7 +38,7 @@
     line-height: 1.3em;
 }
 
-.top-wrap {
+/* .top-wrap {
     display: flex;
     flex-direction: column;
 }
@@ -50,7 +50,7 @@
     padding: 20px 12px 80px 12px;
     width: 100%;
     height: auto;
-}
+} */
 
 .second-header {
     width: 100%;
@@ -137,7 +137,7 @@
 
 
 /* Tile -------------------- */
-.col-tile {
+ /* .col-tile {
   margin: 0 0 16px;
   width: 100%;
   min-height: 250px;
@@ -236,12 +236,12 @@
     text-align: center;
     padding-right: .5em;
     color: #1b72cd;
-}
+} */
 /* -------------------- End of Tile */
 
 
 /* Garoon type Tile  -------------------- */
-.col-tile-gr {
+/* .col-tile-gr {
     text-align: center;
     width: 100%;
     height: 270px;
@@ -276,7 +276,7 @@ i.index-pdf {
   color: #c50102;
   margin-left: 5px;
   font-size: 1.3em;
-}
+} */
 
 /* -------------------- End of Garoon type Tile */
 
@@ -350,7 +350,7 @@ i.index-pdf {
         justify-content: space-around;
     }
 
-    .col-tile {
+    /* .col-tile {
         width: 46.8%;
         margin: 0 1.6% 16px;
     }
@@ -373,7 +373,7 @@ i.index-pdf {
     }
     i.index-pdf {
         font-size: 1.3em;
-    }
+    } */
 
 }
 
@@ -383,7 +383,7 @@ i.index-pdf {
       height: 180px;
     }
 
-    .tile-title {
+    /* .tile-title {
          font-size:1.55rem;
      }
 
@@ -394,7 +394,7 @@ i.index-pdf {
     .col-tile-gr,
     .col-tile-gr2 {
         width: 28%;
-    }
+    } */
 
     .main {
       top: 0;
