トップページのボタンのスタイルをメルワイオリジナルになるように修正

--- a/static/stylesheets/custom_mw.css
+++ b/static/stylesheets/custom_mw.css
@@ -3,7 +3,7 @@ a,
 .breadcrumbs a,
 .col-tile-gr2 a,
 .tile-text li:before,
-#main .tile-title,
+.col-tile-gr .tile-title,
 .col-tile-gr i,
 .article a,
 .tree-title a,
